Fixed data-count number not showing

--- a/_sass/layout/_card.scss
+++ b/_sass/layout/_card.scss
@@ -14,6 +14,10 @@
       text-align: right;
       width: 50px;
       opacity: 0;
+      
+      &:hover {
+        opacity: .5;
+      }
     }
   }
 
@@ -60,7 +64,6 @@
     display: table;
     width: 100%;
     font-size: $discovery-font-size;
-    overflow: auto;
 
     .image {
       display: table-cell;
